# compette

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust_test.yml
backend_llvm/: Cargo.toml
backend_llvm/src/: block.rs  cond.rs  expr.rs  ext_defs.rs  func.rs  lib.rs  loops.rs  stmt.rs  structs.rs  utils.rs
compette/: Cargo.toml
compette/src/: args.rs  build.rs  main.rs
examples/: ex2.slpe  ex3.slpe  ex4.slpe  ex5.slpe  ex6.slpe  ex7.slpe  ex8.slpe  ex9.slpe  example.qq  example.slpe  factorial.slpe  fib.slpe
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  tests.rs  types.rs
llvm/: Cargo.toml
llvm/src/: builder.rs  codegen.rs  expr.rs  flow_control.rs  func.rs  helpers.rs  lib.rs  operations.rs  stdlib_defs.rs  structs.rs  types.rs  variables.rs
new_parser/: Cargo.toml
new_parser/src/: basics.rs  block.rs  cond.rs  errors.rs  expr.rs  func.rs  imports.rs  lib.rs  loops.rs  nodes.rs  stmt.rs  test.rs
parser/: Cargo.toml
parser/src/: basics.rs  block.rs  expr.rs  flow_control.rs  func.rs  funcs.rs  imports.rs  lib.rs  loops.rs  nodes.rs  parser.rs  stmt.rs  test.rs  tests.rs  values.rs
passes/: Cargo.toml
passes/src/: lib.rs
sloppee/: Cargo.toml
sloppee/src/: args.rs  build.rs  main.rs
src/: args.rs  errors.rs  main.rs
src/lexer/: lexer.rs  mod.rs  tests.rs  types.rs
src/llvm/: builder.rs  codegen.rs  expr.rs  flow_control.rs  func.rs  helpers.rs  mod.rs  operations.rs  stdlib_defs.rs  structs.rs  tests.rs  types.rs  variables.rs
src/new_parser/: basics.rs  block.rs  errors.rs  expr.rs  func.rs  mod.rs  nodes.rs
stdlib/: Cargo.toml
tests/: Cargo.toml
(+27 files in other folders)
