workspace = { members = ["stdlib"] }
[package]
name = "sloppee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-dynamic"] }
stdlib = { path = "./stdlib" }
