[workspace]
members = [
	"sloppee",
	"lexer",
	"parser",
	"new_parser",
	"llvm",
	"backend_llvm",
	"stdlib",
	"tests",
]
resolver = "3"

[workspace.package]
name = "sloppee"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-dynamic"] }

stdlib = { path = "./stdlib" }

lexer = { path = "./lexer" }
parser = { path = "./parser" }
new_parser = { path = "./new_parser" }
llvm = { path = "./llvm" }
backend_llvm = { path = "./backend_llvm" }

tests = { path = "./tests" }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
