[workspace]
members = [
	"compette",
	"lexer",
	"parser",
	"backend_llvm",
	"stdlib",
	"tests",
	"passes",
]
resolver = "3"

[workspace.package]
name = "compette"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-dynamic"] }

stdlib = { path = "./stdlib" }

lexer = { path = "./lexer" }
parser = { path = "./parser" }
backend_llvm = { path = "./backend_llvm" }
passes = { path = "./passes" }

tests = { path = "./tests" }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
